<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:text="@string/weatherInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="15dp"
        android:id="@+id/info"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="18sp"
        />

    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/weatherIcon"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="29dp" />


    <View
        android:id="@+id/horizontalLine"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#FF0000FF"
        android:layout_marginTop="56dp"
        android:layout_below="@+id/weatherIcon"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/shoes"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:contentDescription="@string/shoes"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/clothingTop"
        android:layout_alignStart="@+id/clothingTop" />

    <ImageView
        android:id="@+id/accessory"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:contentDescription="@string/accessory"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_alignTop="@+id/shoes"
        android:layout_alignStart="@+id/clothingBottom" />


    <ImageView
        android:id="@+id/clothingTop"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:contentDescription="@string/top"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="26dp"
        android:layout_marginStart="30dp"
        android:layout_below="@+id/horizontalLine"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/clothingBottom"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:contentDescription="@string/bottom"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_alignTop="@+id/clothingTop"
        android:layout_alignEnd="@+id/weatherIcon" />


</RelativeLayout>