<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.agamdogra.weatherwear.WelcomeScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welome"
        android:layout_marginTop="125dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/welcome"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_option"
        android:id="@+id/select_option"
        android:layout_below="@+id/welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp" />

    <Button
        android:text="@string/use_GPS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gpsButton"
        android:layout_marginTop="64dp"
        android:layout_below="@+id/select_option"
        android:layout_centerHorizontal="true"
        android:onClick="onClickGPS" />

    <Button
        android:text="@string/use_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchManuallyButton"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/gpsButton"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
